# invoicekit

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  clippy.toml  deny.toml  justfile
.beads/: config.yaml  issues.jsonl  tid_mapping.json
.cargo/: audit.toml
.ntm/: rate_limits.json
bindings/node-napi/: Cargo.toml  README.md
bindings/node-napi/src/: lib.rs
bindings/node-napi/tests/: engine_abi_golden.test.ts
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/python/invoicekit/: __init__.py  __init__.pyi
bindings/python/src/: lib.rs
bindings/python/tests/: test_engine_abi.py  test_python_sdk.py
bindings/rest-shim/: Cargo.toml  Dockerfile  README.md
bindings/rest-shim/examples/: export_openapi.rs
bindings/rest-shim/src/: lib.rs  main.rs
bindings/wasm-browser/: Cargo.toml  README.md
bindings/wasm-browser/src/: lib.rs
bridges/chargebee/: Cargo.toml  README.md
bridges/chargebee/src/: lib.rs
bridges/lago/: Cargo.toml  README.md
bridges/lago/src/: lib.rs
bridges/maxio/: Cargo.toml  README.md
bridges/maxio/src/: lib.rs
bridges/recurly/: Cargo.toml  README.md
bridges/recurly/src/: lib.rs
bridges/stripe-invoicing/: Cargo.toml  README.md
bridges/stripe-invoicing/src/: lib.rs
conformance-corpus/: fixture-metadata.schema.json
crates/adversarial-generator/: Cargo.toml  README.md
crates/adversarial-generator/src/: lib.rs
crates/archive/: Cargo.toml  README.md
crates/archive/src/: lib.rs
crates/bench-harness/: Cargo.toml  README.md
crates/bench-harness/benches/: cii_parse.rs  codelist_lookup.rs  evidence.rs  intake_pdf.rs  ir_round_trip.rs  render_pdf.rs  tax_calc.rs  ubl_parse.rs  validate.rs  xml_canonicalization.rs
crates/bench-harness/src/: lib.rs
crates/canonical/: Cargo.toml  README.md
crates/canonical/src/: lib.rs
crates/canonical/tests/: golden_canonical.rs  proptest_canonical.rs
crates/canonical/tests/golden/: .gitignore
crates/canonical/tests/golden/json/: invoice_fragment.golden  nested_keys_array_order.golden  numbers.golden  scalars_null.golden  unicode_escapes.golden
crates/canonical/tests/golden/xml/: decl_and_empty_elements.golden  inter_element_whitespace.golden  ubl_invoice.golden  ubl_prefix_and_attr_sort.golden
crates/cli/: Cargo.toml  README.md
crates/cli/data/capabilities/: matrix.json
crates/cli/src/: lib.rs  main.rs
crates/cli/src/admin/: mod.rs  replay.rs  stuck.rs
crates/cli/src/commands/: capabilities.rs  codelist_update.rs  diff.rs  doctor.rs  init.rs  migrate_archive.rs  mod.rs  pack.rs  peppol.rs  repl.rs  replay.rs  show.rs  timestamp.rs  unpack.rs  validate.rs  verify.rs  version.rs
crates/codelists/: Cargo.toml  README.md
crates/codelists/data/: en16931-vat-categories.json  iso-3166-1-alpha2.json  iso-3166-2.json  iso-4217-2024.json  peppol-participant-schemes.json  peppol-uncl1001-invoice.json  unece-rec20-units.json
crates/codelists/data/sources/: iso-4217-sample.csv
crates/codelists/src/: lib.rs  sources.rs
crates/envelope-encryption/: Cargo.toml  README.md
crates/envelope-encryption/src/: lib.rs
crates/evidence/: Cargo.toml  README.md
crates/evidence-dsse/: Cargo.toml  README.md
crates/evidence-dsse/src/: lib.rs
crates/evidence/src/: lib.rs
crates/format-cii/: Cargo.toml  README.md
crates/format-cii/data/: cii-d16b-element-coverage.json
crates/format-cii/examples/: generate_cii_corpus.rs
crates/format-cii/src/: lib.rs  mapping.rs
crates/format-cii/tests/: cii_corpus.rs
crates/format-detect/: Cargo.toml  README.md
crates/format-detect/src/: lib.rs
crates/format-detect/tests/: conformance_corpus.rs
crates/format-gobl/: Cargo.toml  README.md
crates/format-gobl/src/: codec.rs  lib.rs
crates/format-gobl/tests/: upstream_corpus.rs
crates/format-ubl/: Cargo.toml  README.md
crates/format-ubl/examples/: generate_ubl_corpus.rs
crates/format-ubl/schemas/ubl-2.1/: PROVENANCE.md  invoicekit-extension-v1.xsd
crates/format-ubl/src/: lib.rs  mapping.rs  schema.rs
crates/format-ubl/tests/: ubl_corpus.rs
crates/inbound-peppol/: Cargo.toml  README.md
crates/inbound-peppol/src/: lib.rs
crates/intake-citation/: Cargo.toml  README.md
crates/intake-citation/src/: lib.rs
crates/intake-ocr/: Cargo.toml  README.md
crates/intake-ocr/src/: lib.rs
crates/intake-pdf/: Cargo.toml  README.md
crates/intake-pdf/src/: factur_x.rs  lib.rs  script_order.rs  text.rs
crates/intake-pdf/tests/: script_reading_order.rs
crates/intake-vlm/: Cargo.toml  README.md
crates/intake-vlm/src/: lib.rs
deploy/: README.md  docker-compose.yml  smoke.sh
docs/: CLI.md  CONFORMANCE-LICENSING.md  DOTNET-SDK.md  JAVA-SDK.md  PYTHON-SDK.md  README.md  RELEASE-SIGNING.md  TYPESCRIPT-TEMPLATES.md
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: canonicalize_json.rs  canonicalize_xml.rs  ir_try_from_value.rs  render_typst_pdf.rs  ubl_from_xml.rs
plans/: COVERAGE.md  COVERAGE_LOOP_EVIDENCE.md  PDF-A-3-POSTPROC.md  PLAN.md  PLAN_IMPROVEMENTS_v0.7.md  PLAN_REVIEW_codex.md  PLAN_REVIEW_round2_codex.md  PLAN_REVIEW_round2_gemini.md  PLAN_REVIEW_round3_codex.md  PLAN_REVIEW_round3_gemini.md  PLAN_REVIEW_round4_codex.md  PLAN_REVIEW_round4_gemini.md  PLAN_v0.2_revisions.md  SKILL_MATRIX.md  _discovery_builders_manual.md
research/: MASTER_REPORT.md  README.md  ai-extraction-sota.md  brenner-codex.md  brenner-gemini.md  buyer-personas.md  competitive-pricing.md  dev-pain-points.md  duel-codex-scores-gemini.md  duel-gemini-scores-codex.md  ideas-phase0-baseline.md  ideas-phase0.5-critique.md  ideas-phase1-divergent.md  ideas-phase4-expansion.md  ideas-phase4b-gap-fill.md  oss-landscape.md  peppol-network.md  project-framing.md  regulatory-map.md  synthesis.md  triangulation-codex.md  triangulation-gemini.md  triangulation-prompt.md
schemas/: invoicekit-capabilities-v1.json  invoicekit-ir-v1.json  reconcile-api.openapi.yaml  validation-explain-plan.schema.json  validation-result.schema.json
scripts/: check-coverage.sh  coverage-thresholds.json
(+2842 files in other folders)
