[package]
name = "invoicekit-binding-python"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "InvoiceKit workspace member: invoicekit-binding-python"
publish = false

[lib]
name = "invoicekit_binding_python"
path = "src/lib.rs"

[lints]
workspace = true
