[build-system]
requires = ["maturin>=1.13,<2"]
build-backend = "maturin"

[project]
name = "invoicekit"
dynamic = ["version"]
description = "Python SDK for the InvoiceKit engine ABI"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "The InvoiceKit Authors" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Rust",
  "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/MuhDur/invoicekit"
Repository = "https://github.com/MuhDur/invoicekit"

[tool.maturin]
manifest-path = "Cargo.toml"
module-name = "invoicekit._native"
python-source = "python"
features = ["extension-module"]
