[package]
name = "invoicekit-binding-rest-shim"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "InvoiceKit workspace member: invoicekit-binding-rest-shim"
publish = false

[lib]
name = "invoicekit_binding_rest_shim"
path = "src/lib.rs"

[lints]
workspace = true
