[package]
name = "invoicekit-binding-wasm-browser"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "InvoiceKit workspace member: invoicekit-binding-wasm-browser"
publish = false

[lib]
name = "invoicekit_binding_wasm_browser"
path = "src/lib.rs"

[lints]
workspace = true
