# SPDX-License-Identifier: Apache-2.0
# Copyright 2026 The InvoiceKit Authors

[package]
name = "invoicekit-bridge-maxio"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "InvoiceKit bridge for Maxio (Chargify + SaaSOptics). Parses Maxio invoice / payment webhook events, extracts a typed invoice summary, and surfaces dropped fields via LossinessLedger. Same shape as the Stripe + Lago bridges."
publish = false

[lib]
name = "invoicekit_bridge_maxio"
path = "src/lib.rs"

[dependencies]
invoicekit-ir = { path = "../../crates/ir", version = "0.1.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror.workspace = true

[lints]
workspace = true
