[package]
name = "invoicekit-bridge-stripe-invoicing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "InvoiceKit workspace member: invoicekit-bridge-stripe-invoicing"
publish = false

[lib]
name = "invoicekit_bridge_stripe_invoicing"
path = "src/lib.rs"

[lints]
workspace = true
