[package]
name = "invoicekit-archive"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "InvoiceKit workspace member: invoicekit-archive"
publish = false

[lib]
name = "invoicekit_archive"
path = "src/lib.rs"

[lints]
workspace = true
