# SPDX-License-Identifier: Apache-2.0
# Copyright 2026 The InvoiceKit Authors

[package]
name = "invoicekit-archive"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "InvoiceKit pluggable archive backend: Archive trait, LocalFsArchive, S3ObjectLockArchive, AzureWormArchive, and MockArchive."
publish = false

[lib]
name = "invoicekit_archive"
path = "src/lib.rs"

[dependencies]
invoicekit-evidence = { path = "../evidence", version = "0.2.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
