[package]
name = "invoicekit-bench-harness"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "InvoiceKit cross-crate criterion benchmark harness; backs the T-007 performance regression budget."
publish = false

[lib]
name = "invoicekit_bench_harness"
path = "src/lib.rs"
# Disabling the implicit `bench` target keeps `cargo bench -p invoicekit-bench-harness`
# from invoking the lib unit tests as a benchmark (they reject criterion's
# `--warm-up-time` / `--measurement-time` flags and would fail the workflow).
bench = false

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support", "html_reports"] }
# `version` is required alongside `path` so cargo-deny does not flag this as a
# wildcard dependency in the workspace bans check.
invoicekit-canonical = { path = "../canonical", version = "0.0.0" }
invoicekit-format-ubl = { path = "../format-ubl", version = "0.0.0" }
invoicekit-ir = { path = "../ir", version = "0.0.0" }
rust_decimal = "1"
serde_json = "1"

[[bench]]
name = "ir_round_trip"
harness = false

[[bench]]
name = "xml_canonicalization"
harness = false

[[bench]]
name = "ubl_parse"
harness = false

[lints]
workspace = true
