# SPDX-License-Identifier: Apache-2.0
# Copyright 2026 The InvoiceKit Authors
[package]
name = "invoicekit-canonical"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "InvoiceKit workspace member: invoicekit-canonical — pure-Rust RFC 8785 JSON Canonicalization Scheme."
publish = false

[lib]
name = "invoicekit_canonical"
path = "src/lib.rs"

[dependencies]
ryu-js = "1"
serde_json = { version = "1", features = ["preserve_order"] }
thiserror.workspace = true

[dev-dependencies]
proptest = "1"
serde_json = { version = "1", features = ["preserve_order", "arbitrary_precision"] }

[lints]
workspace = true
# T-020 marker — re-trigger CI
