# SPDX-License-Identifier: Apache-2.0
# Copyright 2026 The InvoiceKit Authors
[package]
name = "invoicekit-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "InvoiceKit workspace CLI member: invoicekit-cli"
publish = false

[lib]
name = "invoicekit_cli"
path = "src/lib.rs"

[[bin]]
name = "invoicekit"
path = "src/main.rs"

[[bin]]
name = "gen-schema"
path = "src/bin/gen_schema.rs"

[dependencies]
invoicekit-ir = { path = "../ir", version = "0.0.0" }
serde_json = "1"

[lints]
workspace = true
