# SPDX-License-Identifier: Apache-2.0
# Copyright 2026 The InvoiceKit Authors
[package]
name = "invoicekit-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "InvoiceKit workspace CLI member: invoicekit-cli"
publish = false

[lib]
name = "invoicekit_cli"
path = "src/lib.rs"

[[bin]]
name = "invoicekit"
path = "src/main.rs"

[[bin]]
name = "gen-schema"
path = "src/bin/gen_schema.rs"

[[bin]]
name = "migrate-archive"
path = "src/bin/migrate_archive.rs"

[[bin]]
name = "invoicekit-admin"
path = "src/bin/invoicekit_admin.rs"

[dependencies]
blake3 = "1"
invoicekit-codelists = { path = "../codelists", version = "0.0.0" }
invoicekit-evidence = { path = "../evidence", version = "0.0.0" }
invoicekit-ir = { path = "../ir", version = "0.0.0" }
invoicekit-migration = { path = "../migration", version = "0.0.0" }
invoicekit-reconcile = { path = "../reconcile", version = "0.0.0" }
invoicekit-replay = { path = "../replay", version = "0.0.0" }
invoicekit-signer = { path = "../signer", version = "0.0.0" }
invoicekit-timestamping = { path = "../timestamping", version = "0.0.0" }
invoicekit-transmit-peppol-byok = { path = "../transmit-peppol-byok", version = "0.0.0" }
invoicekit-validate = { path = "../validate", version = "0.0.0" }
invoicekit-validate-ubl-cii = { path = "../validate-ubl-cii", version = "0.0.0" }
invoicekit-verify = { path = "../verify", version = "0.0.0" }
rusqlite = { version = "0.37", features = ["bundled"] }
rustyline = "18.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
