[package]
name = "invoicekit-codelists"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "InvoiceKit workspace member: invoicekit-codelists"
publish = false

[lib]
name = "invoicekit_codelists"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror.workspace = true

[dev-dependencies]
proptest = { version = "1", default-features = false, features = ["std"] }

[lints]
workspace = true
