# SPDX-License-Identifier: Apache-2.0
# Copyright 2026 The InvoiceKit Authors
[package]
name = "invoicekit-envelope-encryption"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Envelope encryption (AES-GCM + per-tenant wrapped DEK) with a pluggable KMS adapter."
publish = false

[lib]
name = "invoicekit_envelope_encryption"
path = "src/lib.rs"

[dependencies]
aes-gcm = { version = "0.10", features = ["std"] }
blake3 = "1"
getrandom = "0.2"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
thiserror.workspace = true
zeroize = { version = "1", features = ["derive"] }

[lints]
workspace = true
