[package]
name = "invoicekit-evidence"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "InvoiceKit workspace member: invoicekit-evidence"
publish = false

[lib]
name = "invoicekit_evidence"
path = "src/lib.rs"

[lints]
workspace = true
