# SPDX-License-Identifier: Apache-2.0
# Copyright 2026 The InvoiceKit Authors

[package]
name = "invoicekit-evidence"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "InvoiceKit evidence bundle format (.invoicekit / .ikb). Carries the canonical invoice, format artefacts, validation trace, and gateway receipts under a BLAKE3 manifest so the bundle replays bit-for-bit."
publish = false

[lib]
name = "invoicekit_evidence"
path = "src/lib.rs"

[dependencies]
blake3 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
thiserror.workspace = true
zstd = "0.13"

[lints]
workspace = true
